# odin-basisu

./: .gitignore  CMakeLists.txt  README.md  basisu_comp.odin  basisu_transcode.odin  build.bat  build.sh  build_static.bat  build_static.sh
darwin_arm64/: basisu_c.dylib
